# NeutronStar_PythonAPI

./: CMakeLists.txt  COMMNET_GPU_API.cpp  GCN_API.cpp  GCN_CPU.hpp  GCN_CPU_API.cpp  GGNN_CPU.hpp  GGNN_CPU_API.cpp  GIN_CPU_API.cpp  GIN_GPU_API.cpp  README.md  ggnn_cora.cfg  graph.hpp  graph_API.cpp  mpi.hpp  test2.py  text.py  textforward.py
data/: pubmed.19717.edge  pubmed.mask
